k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-gallery
  namespace: default # Update if using a custom namespace
  labels:
    app: angular-gallery
spec:
  replicas: 1 # Adjust based on your scaling requirements
  selector:
    matchLabels:
      app: angular-gallery
  template:
    metadata:
      labels:
        app: angular-gallery
    spec:
      containers:
        - name: angular-gallery
          image: purveshpanchal/photos:102156
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "256Mi"  # Minimum memory requested
              cpu: "250m"       # Minimum CPU requested 0.25vCPU
            limits:
              memory: "512Mi"   # Maximum memory allowed
              cpu: "500m"       # Maximum CPU allowed 0.5vCPU
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  name: photos-gallery-nodeport
spec:
  selector:
    app: angular-gallery
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080  # Static port exposed on all nodes
  type: NodePort  # Exposes the service on each node's IP at a specified port
