k8s/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: internal-lb
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
spec:
  selector:
    app: angular-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  clusterIP: None  # This makes it an internal load balancer
  type: LoadBalancer
